--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+body{
+    margin:0;
+    height: 100vh;
+    background-image: linear-gradient(to right, rgba(255, 132, 0, 0), rgb(255, 162, 0));
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* <-------------------- Joke Page ------------------> */
+.form-container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form{
+    height: 50%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;  
+    align-content: center;
+    margin-top: 100px;
+}
+.form-input{
+    height: 35px;
+    border-radius: 10px;
+    font-size: 16px;
+    text-decoration: none;
+    border: none;
+    background-color: #9fd6e8;
+    
+}
+.form-input::placeholder{
+    color: white;
+    padding-left: 20px;
+}
+.btn-search{
+    background-color: #9fd6e8;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    width: 200px;
+    border-radius: 10px;
+    margin-left: 25%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.joke{
+    margin-top: 45px;
+    height: fit-content;
 }
