--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -1,18 +1,1 @@
-nav{
- 
-  display: flex;
-  justify-content: space-between;
-  color: rgb(23, 73, 180);
-  padding: 0 30px;
-}
-
-
-nav ul{
-    list-style: none;
-    
-   }
-nav li {
-       display: inline-block;
-       margin-right: 20px ;
-       font-size: 25px;
-   }
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&family=Press+Start+2P&display=swap');
